--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,82 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body,
+div#root {
+  height: 100%;
+}
+
+h2,
+h3 {
+  margin-top: 0;
+  color: #353b48;
+}
+
+form {
+  font-size: calc(8px + 1vmin);
+}
+
+form label {
+  align-self: flex-start;
+}
+
+form input:focus {
+  outline: none;
+}
+
+form input {
+  height: calc(45px + 1vmin);
+  border: 1px solid #dedede;
+  font-size: calc(8px + 1vmin);
+  padding-left: 6px;
+  box-sizing: border-box;
+}
+
+form.primary {
+  max-width: 500px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+
+form.primary input {
+  width: 100%;
+  padding: 0 16px;
+  border-radius: 8px;
+}
+
+form.primary input:focus:not(input[type="submit"]) {
+  border: 1px solid #0984e3;
+  border-radius: 8px;
+}
+
+form.primary input[type="submit"] {
+  background-color: #0984e3;
+  color: white;
+}
+
+form.secondary input:not([type="submit"]) {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+form.secondary input[type="submit"] {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  margin-left: -4px;
+  background-color: #2ecc71;
+  color: white;
+  padding: 0 16px;
+}
+
+a {
+  text-decoration: none;
+  padding: 16px;
+}
+
+svg {
+  cursor: pointer;
 }
